vpc/security_groups/base_pos_security_groups.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Security group configuration for OneView Commerce POS Server'
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
    - Label:
        default: 'VPC Parent Stack'
      Parameters:
      - ParentVPCStack
Parameters:
  ParentVPCStack:
    Description: 'Stack name of parent VPC stack based on vpc/vpc-*azs.yaml template.'
    Type: String
Conditions:
  IsProduction: !Equals [ !Sub '${ParentVPCStack}-LiveIdentifier', production ]

Resources:

# POS Load Balancer

  cfLoadBalancerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'POS Jetty Server load balancer security group'
      VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'
      Tags:
      - Key: Name
        Value: cfLoadBalancerSecurityGroup
      - Key: Project
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-ProjectName'
      - Key: LiveIdentifier
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-LiveIdentifier'
      SecurityGroupIngress:
      -
        FromPort: 443
        ToPort: 443
        IpProtocol: tcp
        CidrIp: '192.168.0.0/16'

# POS Server

  cfPOSServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'POS Jetty Server security group'
      VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'
      Tags:
      - Key: Name
        Value: cfPOSServerSecurityGroup
      - Key: Project
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-ProjectName'
      - Key: LiveIdentifier
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-LiveIdentifier'
      SecurityGroupIngress:
      -
        FromPort: 443
        ToPort: 443
        IpProtocol: tcp
        SourceSecurityGroupId: !Ref cfLoadBalancerSecurityGroup
      -
        FromPort: 80
        ToPort: 80
        IpProtocol: tcp
        SourceSecurityGroupId: !Ref cfLoadBalancerSecurityGroup
      -
        FromPort: 8080
        ToPort: 8080
        IpProtocol: tcp
        SourceSecurityGroupId: !Ref cfLoadBalancerSecurityGroup
      -
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
        SourceSecurityGroupId: !Ref cfBastionHostSecurityGroup

# MongoDB Cloud Manager

  cfMongoDBCloudManagerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'MongoDB Server security group'
      VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'
      Tags:
      - Key: Name
        Value: cfMongoDBCloudManagerSecurityGroup
      - Key: Project
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-ProjectName'
      - Key: LiveIdentifier
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-LiveIdentifier'
      SecurityGroupIngress:
      -
        FromPort: 27000
        ToPort: 27020
        IpProtocol: tcp
        SourceSecurityGroupId: !Ref cfPOSServerSecurityGroup
      -
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
        CidrIp: '4.71.186.128/25'
      -
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
        CidrIp: '4.35.16.128/25'

# RDS Server

  cfRDSSecurityGroup:
    Type: 'AWS::RDS::DBSecurityGroup'
    Properties:
      GroupDescription: 'RDS security group'
      Tags:
      - Key: Name
        Value: cfPOSServerSecurityGroup
      - Key: Project
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-ProjectName'
      - Key: LiveIdentifier
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-LiveIdentifier'
      EC2VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'
      DBSecurityGroupIngress:
      - EC2SecurityGroupId: !Ref cfPOSServerSecurityGroup

# Bastion Host

  cfBastionHostSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Bastion host security group'
      VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'
      Tags:
      - Key: Name
        Value: cfBastionHostSecurityGroup
      - Key: Project
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-ProjectName'
      - Key: LiveIdentifier
        Value:
          'Fn::ImportValue': !Sub '${ParentVPCStack}-LiveIdentifier'
      SecurityGroupIngress:
      -
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
        CidrIp: '192.168.0.0/16'
